feat(hive): finalize Hive 4.0.1 setup on ARM with full debug logging and JDBC validation
- Enabled DEBUG logs for HiveServer2 and Metastore via log4j2 configuration
- Added JVM --add-opens flags to fix Java 17 reflective access errors
- Verified end-to-end functionality using Beeline (create DB, table, insert, select)
- Ensured logs are writable and visible inside container
- Automated startup and config validation through run.sh script